# Image-Processing-using-CUDA

./: .clang-format  CMakeLists.txt  README.md  run.bat  run.sh
docs/: REPORT.md
include/: cli.hpp  img_utils.hpp
scripts/: fetch_data.ps1  fetch_data.sh
src/: cli.cpp  img_utils.cu  main.cpp
